1_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuma-deploy
  namespace: kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuma
  template:
    metadata:
      labels:
        app: kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:latest
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: kuma-data
              mountPath: /app/data
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 1500m
              memory: 4Gi
      volumes:
        - name: kuma-data
          persistentVolumeClaim:
            claimName: kuma-data-pvc
