2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuma-service
  namespace: kuma
spec:
  type: ClusterIP
  selector:
    app: kuma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
