3_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: kuma
    component: ingress-controller
    type: nginx
  name: kuma-ingress
  namespace: kuma
spec:
  ingressClassName: app
  rules:
  - host: kuma.app.tlo.dfo.no
    http:
      paths:
      - backend:
          service:
            name: kuma-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kuma.app.tlo.dfo.no
    secretName: tls-kuma-le-cert
